--- a/src/main/resources/static/bussiness/listbusi.html
+++ b/src/main/resources/static/bussiness/listbusi.html
@@ -8,17 +8,17 @@
     <meta name="description" content="user lists">
     <meta name="author" content="lynn">
 
-    <link rel="stylesheet" type="text/css" href="../../static/lib/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../../static/lib/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="../lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../lib/font-awesome/css/font-awesome.css">
 
-    <script src="../../static/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
-    <script src="../../static/lib/angular-1.5.5/angular.min.js"></script>
+    <script src="../lib/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="../lib/angular-1.5.5/angular.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="../../static/css/theme.css">
-    <link rel="stylesheet" type="text/css" href="../../static/css/premium.css">
+    <link rel="stylesheet" type="text/css" href="../css/theme.css">
+    <link rel="stylesheet" type="text/css" href="../css/premium.css">
 
-    <link href="../../static/css/jquery.circliful.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="../../static/js/jquery.circliful.min.js"></script>
+    <link href="../css/jquery.circliful.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="../js/jquery.circliful.min.js"></script>
 </head>
 <body class=" theme-blue">
 
@@ -261,7 +261,7 @@
 </div>
 
 
-<script type="text/javascript" src="../../static/lib/bootstrap/js/bootstrap.js"></script>
+<script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript">
     $("[rel=tooltip]").tooltip();
     $(function () {
