--- a/src/main/resources/static/cust/listcust.html
+++ b/src/main/resources/static/cust/listcust.html
@@ -8,17 +8,17 @@
     <meta name="description" content="user lists">
     <meta name="author" content="lynn">
 
-    <link rel="stylesheet" type="text/css" href="../../static/lib/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../../static/lib/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="../lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../lib/font-awesome/css/font-awesome.css">
 
-    <script src="../../static/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
-    <script src="../../static/lib/angular-1.5.5/angular.min.js"></script>
+    <script src="../lib/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="../lib/angular-1.5.5/angular.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="../../static/css/theme.css">
-    <link rel="stylesheet" type="text/css" href="../../static/css/premium.css">
+    <link rel="stylesheet" type="text/css" href="../css/theme.css">
+    <link rel="stylesheet" type="text/css" href="../css/premium.css">
 
-    <link href="../../static/css/jquery.circliful.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="../../static/js/jquery.circliful.min.js"></script>
+    <link href="../css/jquery.circliful.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="../js/jquery.circliful.min.js"></script>
 </head>
 <body class=" theme-blue">
 
@@ -107,7 +107,7 @@
             <li class="dropdown hidden-xs">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     <span class="glyphicon glyphicon-user padding-right-small"
-                          style="position:relative;top: 3px;"></span> 客服1
+                          style="position:relative;top: 3px;"></span> 总经理
                     <i class="fa fa-caret-down"></i>
                 </a>
 
@@ -127,7 +127,7 @@
         <li><a href="#" data-target=".dashboard-menu" class="nav-header" data-toggle="collapse">
             业务管理<i class="fa fa-collapse"></i></a></li>
         <li>
-            <ul class="dashboard-menu nav nav-list collapse in">
+            <ul class="dashboard-menu nav nav-list collapse">
                 <li><a href="listbusi.html"><span class="fa fa-caret-right"></span> 业务查询</a></li>
                 <li class="active"><a href="myBussiness.html"><span class="fa fa-caret-right"></span> 我的业务</a></li>
             </ul>
@@ -137,9 +137,9 @@
         <li data-popover="true" rel="popover" data-placement="right"><a href="#" data-target=".premium-menu" class="nav-header collapsed" data-toggle="collapse">
             客户管理<i class="fa fa-collapse"></i></a></li>
         <li>
-            <ul class="premium-menu nav nav-list collapse">
-                <li class="visible-xs visible-sm"><a href="">客户查询</a></span></li>
-                <li class="visible-xs visible-sm"><a href="">我的客户</a></span></li>
+            <ul class="premium-menu nav nav-list collapse in">
+                <li class="active"><a href="listcust.html">客户查询</a></span></li>
+                <li><a href="myCust.html">我的客户</a></span></li>
             </ul>
         </li>
     </ul>
@@ -148,7 +148,7 @@
 <div class="content">
     <div class="header">
 
-        <h1 class="page-title">我的业务</h1>
+        <h1 class="page-title">客户查询</h1>
 
     </div>
     <div class="main-content">
@@ -157,7 +157,6 @@
 
             <div style="float: right;">
                 <form class="form-inline" id="myForm">
-                    <input type="text" class="form-control" placeholder="请输入业务编号" name="busId">
                     <input type="text" class="form-control" placeholder="请输入客户姓名" name="custName">
                     <button class="btn btn-primary" onclick="submitMsg()">查询</button>
                 </form>
@@ -167,136 +166,105 @@
         <table class="table">
             <thead>
             <tr>
-                <th>业务编号</th>
+                <th>客户id</th>
                 <th>客户姓名</th>
-                <th>贷款金额（元）</th>
-                <th>贷款期限（个月）</th>
-                <th>状态</th>
-                <th>备注</th>
+                <th>手机号</th>
+                <th>所属客服</th>
+                <th>贷款状态</th>
                 <th>操作</th>
             </tr>
             </thead>
             <tbody>
             <tr>
-                <td><a href="javascript:void(0)">BUS17042020570211</a></td>
+                <td>1</td>
                 <td>小点点</td>
-                <td>100000.00</td>
-                <td>12</td>
-                <td>待审核</td>
-                <td></td>
+                <td>187****2511</td>
+                <td>客服1</td>
+                <td>贷款中</td>
                 <td>
-                    <a href="" role="button"><i>审核</i></a>
-                    <a href="" role="button"><i>签约</i></a>
-                    <a href="" role="button"><i>放款</i></a>
-                    <a href="" role="button"><i>拒绝</i></a>
-                    <a href="" role="button"><i>取消</i></a>
+                    <a href="" role="button"><i>查看</i></a>
                 </td>
             </tr>
             <tr>
-                <td><a href="javascript:void(0)">BUS17042020580909</a></td>
+                <td>2</td>
                 <td>大点点</td>
-                <td>120000.00</td>
-                <td>18</td>
-                <td>待审核</td>
-                <td></td>
+                <td>135****7544</td>
+                <td>客服1</td>
+                <td>贷款中</td>
                 <td>
-                    <a href="" role="button"><i>审核</i></a>
-                    <a href="" role="button"><i>签约</i></a>
-                    <a href="" role="button"><i>放款</i></a>
-                    <a href="" role="button"><i>拒绝</i></a>
-                    <a href="" role="button"><i>取消</i></a>
+                    <a href="" role="button"><i>查看</i></a>
                 </td>
             </tr>
             <tr>
-                <td><a href="javascript:void(0)">BUS17042020581356</a></td>
+                <td>3</td>
                 <td>小豆豆</td>
-                <td>140000.00</td>
-                <td>6</td>
-                <td>待签约</td>
-                <td>审核通过，征信通过</td>
+                <td>187****2600</td>
+                <td>客服1</td>
+                <td>贷款中</td>
                 <td>
-                    <a href="" role="button" class="greyFont"><i>审核</i></a>
-                    <a href="" role="button"><i>签约</i></a>
-                    <a href="" role="button"><i>放款</i></a>
-                    <a href="" role="button"><i>拒绝</i></a>
-                    <a href="" role="button"><i>取消</i></a>
+                    <a href="" role="button"><i>查看</i></a>
                 </td>
             </tr>
             <tr>
-                <td><a href="javascript:void(0)">BUS17042020591419</a></td>
+                <td>4</td>
                 <td>大豆豆</td>
-                <td>100000.00</td>
-                <td>12</td>
-                <td>待放款</td>
-                <td>签约成功</td>
+                <td>136****0287</td>
+                <td>客服1</td>
+                <td>贷款中</td>
                 <td>
-                    <a href="" role="button" class="greyFont"><i>审核</i></a>
-                    <a href="" role="button" class="greyFont"><i>签约</i></a>
-                    <a href="" role="button"><i>放款</i></a>
-                    <a href="" role="button"><i>拒绝</i></a>
-                    <a href="" role="button"><i>取消</i></a>
+                    <a href="" role="button"><i>查看</i></a>
                 </td>
             </tr>
             <tr>
-                <td><a href="javascript:void(0)">BUS17042020595056</a></td>
+                <td>5</td>
+                <td>啊噗噗</td>
+                <td>135****2014</td>
+                <td>客服1</td>
+                <td>未贷款</td>
+                <td>
+                    <a href="" role="button"><i>查看</i></a>
+                </td>
+            </tr>
+            <tr>
+                <td>6</td>
                 <td>凉瓜</td>
-                <td>100000.00</td>
-                <td>12</td>
-                <td>待审核</td>
-                <td></td>
+                <td>182****3039</td>
+                <td>客服1</td>
+                <td>贷款中</td>
                 <td>
-                    <a href="" role="button"><i>审核</i></a>
-                    <a href="" role="button"><i>签约</i></a>
-                    <a href="" role="button"><i>放款</i></a>
-                    <a href="" role="button"><i>拒绝</i></a>
-                    <a href="" role="button"><i>取消</i></a>
+                    <a href="" role="button"><i>查看</i></a>
                 </td>
             </tr>
             <tr>
-                <td><a href="javascript:void(0)">BUS17042101050709</a></td>
+                <td>7</td>
                 <td>冬瓜</td>
-                <td>100000.00</td>
-                <td>12</td>
-                <td>已取消</td>
-                <td>无法提供所需资料</td>
+                <td>187****2612</td>
+                <td>客服1</td>
+                <td>贷款中</td>
                 <td>
-                    <a href="" role="button" class="greyFont"><i>审核</i></a>
-                    <a href="" role="button" class="greyFont"><i>签约</i></a>
-                    <a href="" role="button" class="greyFont"><i>放款</i></a>
-                    <a href="" role="button" class="greyFont"><i>拒绝</i></a>
-                    <a href="" role="button" class="greyFont"><i>取消</i></a>
+                    <a href="" role="button"><i>查看</i></a>
                 </td>
             </tr>
 
             <tr>
-                <td><a href="javascript:void(0)">BUS17042114570221</a></td>
+                <td>8</td>
                 <td>英文</td>
-                <td>122000.00</td>
-                <td>12</td>
-                <td>已拒绝</td>
-                <td>征信不通过</td>
+                <td>187****2530</td>
+                <td>客服1</td>
+                <td>贷款中</td>
                 <td>
-                    <a href="" role="button" class="greyFont"><i>审核</i></a>
-                    <a href="" role="button" class="greyFont"><i>签约</i></a>
-                    <a href="" role="button" class="greyFont"><i>放款</i></a>
-                    <a href="" role="button" class="greyFont"><i>拒绝</i></a>
-                    <a href="" role="button" class="greyFont"><i>取消</i></a>
+                    <a href="" role="button"><i>查看</i></a>
                 </td>
             </tr>
 
             <tr>
-                <td><a href="javascript:void(0)">BUS17042115270811</a></td>
+                <td>9</td>
                 <td>一丢丢</td>
-                <td>150000.00</td>
-                <td>12</td>
-                <td>待签约</td>
-                <td>审核通过，征信通过</td>
+                <td>187****2700</td>
+                <td>客服1</td>
+                <td>贷款中</td>
                 <td>
-                    <a href="" role="button" class="greyFont"><i>审核</i></a>
-                    <a href="" role="button"><i>签约</i></a>
-                    <a href="" role="button"><i>放款</i></a>
-                    <a href="" role="button"><i>拒绝</i></a>
-                    <a href="" role="button"><i>取消</i></a>
+                    <a href="" role="button"><i>查看</i></a>
                 </td>
             </tr>
             </tbody>
@@ -305,7 +273,8 @@
 
         <ul class="pagination">
             <li><a href="#">&laquo;</a></li>
-            <li><a href="#">1</a></li>
+            <li class="active"><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
             <li><a href="#">&raquo;</a></li>
         </ul>
 
@@ -317,7 +286,7 @@
 </div>
 
 
-<script type="text/javascript" src="../../static/lib/bootstrap/js/bootstrap.js"></script>
+<script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript">
     $("[rel=tooltip]").tooltip();
     $(function () {
