--- a/src/main/resources/static/cust/myCust.html
+++ b/src/main/resources/static/cust/myCust.html
@@ -8,17 +8,17 @@
     <meta name="description" content="user lists">
     <meta name="author" content="lynn">
 
-    <link rel="stylesheet" type="text/css" href="../../static/lib/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../../static/lib/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="../lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../lib/font-awesome/css/font-awesome.css">
 
-    <script src="../../static/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
-    <script src="../../static/lib/angular-1.5.5/angular.min.js"></script>
+    <script src="../lib/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="../lib/angular-1.5.5/angular.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="../../static/css/theme.css">
-    <link rel="stylesheet" type="text/css" href="../../static/css/premium.css">
+    <link rel="stylesheet" type="text/css" href="../css/theme.css">
+    <link rel="stylesheet" type="text/css" href="../css/premium.css">
 
-    <link href="../../static/css/jquery.circliful.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="../../static/js/jquery.circliful.min.js"></script>
+    <link href="../css/jquery.circliful.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="../js/jquery.circliful.min.js"></script>
 </head>
 <body class=" theme-blue">
 
@@ -107,7 +107,7 @@
             <li class="dropdown hidden-xs">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     <span class="glyphicon glyphicon-user padding-right-small"
-                          style="position:relative;top: 3px;"></span> 总经理
+                          style="position:relative;top: 3px;"></span> 客服1
                     <i class="fa fa-caret-down"></i>
                 </a>
 
@@ -138,8 +138,7 @@
             客户管理<i class="fa fa-collapse"></i></a></li>
         <li>
             <ul class="premium-menu nav nav-list collapse in">
-                <li class="active"><a href="listcust.html">客户查询</a></span></li>
-                <li><a href="myCust.html">我的客户</a></span></li>
+                <li class="active"><a href="myCust.html">我的客户</a></span></li>
             </ul>
         </li>
     </ul>
@@ -148,7 +147,7 @@
 <div class="content">
     <div class="header">
 
-        <h1 class="page-title">客户查询</h1>
+        <h1 class="page-title">我的客户</h1>
 
     </div>
     <div class="main-content">
@@ -177,94 +176,103 @@
             <tbody>
             <tr>
                 <td>1</td>
-                <td>小点点</td>
+                <td><a href="javascript:void(0)">小点点</a></td>
                 <td>187****2511</td>
                 <td>客服1</td>
                 <td>贷款中</td>
                 <td>
-                    <a href="" role="button"><i>查看</i></a>
+                    <a href="" role="button"><i>编辑</i></a>&nbsp;&nbsp;
+                    <a href="" role="button" class="greyFont"><i>贷款申请</i></a>
                 </td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>大点点</td>
-                <td>135****7544</td>
+                <td><a href="javascript:void(0)">大绍绍</a></td>
+                <td>135****4480</td>
                 <td>客服1</td>
                 <td>贷款中</td>
                 <td>
-                    <a href="" role="button"><i>查看</i></a>
+                    <a href="" role="button"><i>编辑</i></a>&nbsp;&nbsp;
+                    <a href="" role="button" class="greyFont"><i>贷款申请</i></a>
                 </td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>小豆豆</td>
+                <td><a href="javascript:void(0)">小豆豆</a></td>
                 <td>187****2600</td>
                 <td>客服1</td>
                 <td>贷款中</td>
                 <td>
-                    <a href="" role="button"><i>查看</i></a>
+                    <a href="" role="button"><i>编辑</i></a>&nbsp;&nbsp;
+                    <a href="" role="button" class="greyFont"><i>贷款申请</i></a>
                 </td>
             </tr>
             <tr>
                 <td>4</td>
-                <td>大豆豆</td>
+                <td><a href="javascript:void(0)">大豆豆</a></td>
                 <td>136****0287</td>
                 <td>客服1</td>
                 <td>贷款中</td>
                 <td>
-                    <a href="" role="button"><i>查看</i></a>
+                    <a href="" role="button"><i>编辑</i></a>&nbsp;&nbsp;
+                    <a href="" role="button" class="greyFont"><i>贷款申请</i></a>
                 </td>
             </tr>
             <tr>
                 <td>5</td>
-                <td>啊噗噗</td>
+                <td><a href="javascript:void(0)">啊噗噗</a></td>
                 <td>135****2014</td>
                 <td>客服1</td>
                 <td>未贷款</td>
                 <td>
-                    <a href="" role="button"><i>查看</i></a>
+                    <a href="" role="button"><i>编辑</i></a>&nbsp;&nbsp;
+                    <a href="" role="button"><i>贷款申请</i></a>
                 </td>
             </tr>
             <tr>
                 <td>6</td>
-                <td>凉瓜</td>
+                <td><a href="javascript:void(0)">凉瓜</a></td>
                 <td>182****3039</td>
                 <td>客服1</td>
                 <td>贷款中</td>
                 <td>
-                    <a href="" role="button"><i>查看</i></a>
+                    <a href="" role="button"><i>编辑</i></a>&nbsp;&nbsp;
+                    <a href="" role="button" class="greyFont"><i>贷款申请</i></a>
                 </td>
             </tr>
             <tr>
                 <td>7</td>
-                <td>冬瓜</td>
+                <td><a href="javascript:void(0)">冬瓜</a></td>
                 <td>187****2612</td>
                 <td>客服1</td>
                 <td>贷款中</td>
                 <td>
-                    <a href="" role="button"><i>查看</i></a>
+                    <a href="" role="button"><i>编辑</i></a>&nbsp;&nbsp;
+                    <a href="" role="button" class="greyFont"><i>贷款申请</i></a>
                 </td>
             </tr>
 
             <tr>
                 <td>8</td>
-                <td>英文</td>
+                <td><a href="javascript:void(0)">英文</a></td>
                 <td>187****2530</td>
                 <td>客服1</td>
                 <td>贷款中</td>
                 <td>
-                    <a href="" role="button"><i>查看</i></a>
+                    <a href="" role="button"><i>编辑</i></a>&nbsp;&nbsp;
+                    <a href="" role="button" class="greyFont"><i>贷款申请</i></a>
                 </td>
             </tr>
 
             <tr>
                 <td>9</td>
-                <td>一丢丢</td>
+                <td><a href="javascript:void(0)">一丢丢</a></td>
                 <td>187****2700</td>
                 <td>客服1</td>
                 <td>贷款中</td>
                 <td>
-                    <a href="" role="button"><i>查看</i></a>
+                    <a href="" role="button"><i>编辑</i></a>&nbsp;&nbsp;
+                    <a href="" role="button" class="greyFont"><i>贷款申请</i></a>
                 </td>
             </tr>
             </tbody>
@@ -286,7 +294,7 @@
 </div>
 
 
-<script type="text/javascript" src="../../static/lib/bootstrap/js/bootstrap.js"></script>
+<script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript">
     $("[rel=tooltip]").tooltip();
     $(function () {
