--- a/src/main/resources/static/menuManage/menuManage.html
+++ b/src/main/resources/static/menuManage/menuManage.html
@@ -8,14 +8,14 @@
     <meta name="description" content="user lists">
     <meta name="author" content="lynn">
 
-    <link rel="stylesheet" type="text/css" href="../../static/lib/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../../static/lib/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="../lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../lib/font-awesome/css/font-awesome.css">
 
-    <script src="../../static/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
-    <script src="../../static/lib/angular-1.5.5/angular.min.js"></script>
+    <script src="../lib/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="../lib/angular-1.5.5/angular.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="../../static/css/theme.css">
-    <link rel="stylesheet" type="text/css" href="../../static/css/premium.css">
+    <link rel="stylesheet" type="text/css" href="../css/theme.css">
+    <link rel="stylesheet" type="text/css" href="../css/premium.css">
 
 </head>
 <body class=" theme-blue">
@@ -109,11 +109,11 @@
 
 <div class="sidebar-nav">
     <ul>
-        <li><a href="#" data-target=".dashboard-menu" class="nav-header" data-toggle="collapse">
+        <li><a href="#" data-target=".dashboard-menu" class="nav-header collapsed" data-toggle="collapse">
             用户管理<i class="fa fa-collapse"></i></a></li>
         <li>
             <ul class="dashboard-menu nav nav-list collapse in">
-                <li class="active"><a href="users.html"><span class="fa fa-caret-right"></span> 用户查询</a></li>
+                <li class="visible-xs visible-sm"><a href="../user/users.html"><span class="fa fa-caret-right"></span> 用户查询</a></li>
             </ul>
         </li>
 
@@ -125,11 +125,11 @@
             </ul>
         </li>
 
-        <li data-popover="true" rel="popover" data-placement="right"><a href="#" data-target=".premium-menu" class="nav-header collapsed" data-toggle="collapse">
+        <li data-popover="true" rel="popover" data-placement="right"><a href="#" data-target=".premium-menu" class="nav-header" data-toggle="collapse">
             菜单管理<i class="fa fa-collapse"></i></a></li>
         <li>
-            <ul class="premium-menu nav nav-list collapse">
-                <li class="visible-xs visible-sm"><a href="../menuManage/menuManage.html"><span class="fa fa-caret-right"></span>菜单配置</a></li>
+            <ul class="dashboard-menu nav nav-list collapse in">
+                <li class="active"><a href="menuManage.html"><span class="fa fa-caret-right"></span>菜单配置</a></li>
             </ul>
         </li>
     </ul>
@@ -138,20 +138,20 @@
 <div class="content">
     <div class="header">
 
-        <h1 class="page-title">用户查询</h1>
+        <h1 class="page-title">菜单配置</h1>
 
     </div>
     <div class="main-content">
 
         <div class="btn-toolbar list-toolbar">
-            <div style="float: left">
-                <button class="btn btn-primary" onclick="loadPage()"><i class="fa fa-plus"></i> 新增用户</button>
-            </div>
-            
+
             <div style="float: right;">
                 <form class="form-inline" id="myForm">
                     <input type="text" class="form-control" placeholder="请输入用户姓名" name="username">
                     <input type="text" class="form-control" placeholder="请输入用户工号" name="employeeId">
+                    &nbsp;&nbsp;<label>角色：</label><select style="width: 10rem" class="form-control" name="roleId">
+                        <option>全部</option>
+                    </select>
                     <button class="btn btn-primary" onclick="submitMsg()">查询</button>
                 </form>
 
@@ -162,10 +162,8 @@
             <tr>
                 <th>用户id</th>
                 <th>用户名</th>
-                <th>登录账号</th>
-                <th>手机号</th>
-                <th>工号</th>
                 <th>角色</th>
+                <th>所配菜单</th>
                 <th style="width: 7.5em;"></th>
             </tr>
             </thead>
@@ -173,37 +171,28 @@
             <tr>
                 <td>1</td>
                 <td>林裕美</td>
-                <td>linyumei</td>
-                <td>18775242500</td>
-                <td>0227</td>
                 <td>总经理</td>
+                <td>我的客户，客户查询，我的业务，业务查询</td>
                 <td>
-                    <a href="l"><i class="fa fa-pencil"></i><i>编辑</i></a>&nbsp;&nbsp;
-                    <a href="" role="button"><i>停用</i></a>
+                    <a href="l"><i class="fa fa-pencil"></i><i>菜单配置</i></a>
                 </td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>大绍殷</td>
-                <td>dashaone</td>
-                <td>13580114488</td>
-                <td>0327</td>
                 <td>客服1</td>
+                <td>我的客户，我的业务，业务查询</td>
                 <td>
-                    <a href=""><i class="fa fa-pencil"></i><i>编辑</i></a>&nbsp;&nbsp;
-                    <a href="" role="button"><i>停用</i></a>
+                    <a href="l"><i class="fa fa-pencil"></i><i>菜单配置</i></a>
                 </td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>小橘毛</td>
-                <td>xiaojumao</td>
-                <td>15278366609</td>
-                <td>0328</td>
                 <td>客服2</td>
+                <td>我的客户，我的业务，业务查询</td>
                 <td>
-                    <a href="" role="button"><i>启用</i></a>&nbsp;&nbsp;
-                    <a href=""><i class="fa fa-pencil"></i><i>编辑</i></a>
+                    <a href="l"><i class="fa fa-pencil"></i><i>菜单配置</i></a>
                 </td>
             </tr>
             </tbody>
@@ -223,7 +212,7 @@
 </div>
 
 
-<script type="text/javascript" src="../../static/lib/bootstrap/js/bootstrap.js"></script>
+<script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
 <script type="text/javascript">
     $("[rel=tooltip]").tooltip();
     $(function () {
@@ -231,9 +220,9 @@
             return false;
         });
     });
-    
+
     function loadPage() {
-        window.location.href="user-add.html";
+
     }
 </script>
 
