--- a/src/main/resources/static/sign-in.html
+++ b/src/main/resources/static/sign-in.html
@@ -8,17 +8,18 @@
     <meta name="description" content="login page">
     <meta name="author" content="lynn">
 
-    <link rel="stylesheet" type="text/css" href="../static/lib/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../static/lib/font-awesome/css/font-awesome.css">
-    <script src="../static/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="../static/css/theme.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/premium.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/main.css">
+    <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css">
+    <script src="lib/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="css/theme.css">
+    <link rel="stylesheet" type="text/css" href="css/premium.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 
-    <script type="text/javascript" src="../static/lib/angular-1.5.5/angular.min.js"></script>
-    <script type="text/javascript" src="../static/lib/angular-1.5.5/angular-route.min.js"></script>
-    <script type="text/javascript" src="../static/js/main.js"></script>
-    <script type="text/javascript" src="../static/js/signIn.js"></script>
+    <script type="text/javascript" src="lib/angular-1.5.5/angular.min.js"></script>
+    <script type="text/javascript" src="lib/angular-1.5.5/angular-route.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/angularCtrl.js"></script>
+    <script type="text/javascript" src="js/angularServ.js"></script>
 
 </head>
 <body class=" theme-blue">
@@ -37,7 +38,7 @@
 
 <div class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
-        <a class="" href="index.html"><span class="navbar-brand"> 登录页面</span></a></div>
+        <a class="" href="../templates/index.html"><span class="navbar-brand"> 登录页面</span></a></div>
 
     <div class="navbar-collapse collapse" style="height: 1px;">
 
