--- a/src/main/resources/static/menuManage/menuSetting.html
+++ b/src/main/resources/static/menuManage/menuSetting.html
@@ -129,7 +129,7 @@
             菜单管理<i class="fa fa-collapse"></i></a></li>
         <li>
             <ul class="dashboard-menu nav nav-list collapse in">
-                <li class="active"><a href="menuManage.html"><span class="fa fa-caret-right"></span>菜单配置</a></li>
+                <li class="active"><a href="menuSetting.html"><span class="fa fa-caret-right"></span>菜单配置</a></li>
             </ul>
         </li>
     </ul>
