--- a/src/main/resources/static/rootManage/rootPermission.html
+++ b/src/main/resources/static/rootManage/rootPermission.html
@@ -129,7 +129,7 @@
             菜单管理<i class="fa fa-collapse"></i></a></li>
         <li>
             <ul class="premium-menu nav nav-list collapse">
-                <li class="visible-xs visible-sm"><a href="../menuManage/menuManage.html"><span class="fa fa-caret-right"></span>菜单配置</a></li>
+                <li class="visible-xs visible-sm"><a href="../menuManage/menuSetting.html"><span class="fa fa-caret-right"></span>菜单配置</a></li>
             </ul>
         </li>
     </ul>
