--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -1,81 +1,3 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>信贷系统</title>
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="user lists">
-    <meta name="author" content="lynn">
-
-    <link rel="stylesheet" type="text/css" href="../lib/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../lib/font-awesome/css/font-awesome.css">
-
-    <script src="../lib/jquery-1.11.1.min.js" type="text/javascript"></script>
-    <script src="../lib/angular-1.5.5/angular.min.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="../css/theme.css">
-    <link rel="stylesheet" type="text/css" href="../css/premium.css">
-
-</head>
-<body class=" theme-blue">
-
-<!-- Demo page code -->
-
-<script type="text/javascript">
-    $(function () {
-        var match = document.cookie.match(new RegExp('color=([^;]+)'));
-        if (match) var color = match[1];
-        if (color) {
-            $('body').removeClass(function (index, css) {
-                return (css.match(/\btheme-\S+/g) || []).join(' ')
-            })
-            $('body').addClass('theme-' + color);
-        }
-
-        $('[data-popover="true"]').popover({html: true});
-
-    });
-</script>
-<style type="text/css">
-    #line-chart {
-        height: 300px;
-        width: 800px;
-        margin: 0px auto;
-        margin-top: 1em;
-    }
-
-    .navbar-default .navbar-brand, .navbar-default .navbar-brand:hover {
-        color: #fff;
-    }
-</style>
-
-<script type="text/javascript">
-    $(function () {
-        var uls = $('.sidebar-nav > ul > *').clone();
-        uls.addClass('visible-xs');
-        $('#main-menu').append(uls.clone());
-    });
-</script>
-
-<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-
-
-<!--[if lt IE 7 ]>
-<body class="ie ie6"> <![endif]-->
-<!--[if IE 7 ]>
-<body class="ie ie7 "> <![endif]-->
-<!--[if IE 8 ]>
-<body class="ie ie8 "> <![endif]-->
-<!--[if IE 9 ]>
-<body class="ie ie9 "> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!-->
-
-<!--<![endif]-->
-
 <div class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
@@ -84,15 +6,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="" href="index.html"><span class="navbar-brand"> 信贷系统</span></a>
+        <a class="" href=""><span class="navbar-brand"> 信贷系统</span></a>
     </div>
 
     <div class="navbar-collapse collapse" style="height: 1px;">
         <ul id="main-menu" class="nav navbar-nav navbar-right">
             <li class="dropdown hidden-xs">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">
                     <span class="glyphicon glyphicon-user padding-right-small"
-                          style="position:relative;top: 3px;"></span> 管理员
+                          style="position:relative;top: 3px;"></span> {{role}}
                     <i class="fa fa-caret-down"></i>
                 </a>
 
@@ -147,7 +69,7 @@
             <div style="float: left">
                 <button class="btn btn-primary" onclick="loadPage()"><i class="fa fa-plus"></i> 新增用户</button>
             </div>
-            
+
             <div style="float: right;">
                 <form class="form-inline" id="myForm">
                     <input type="text" class="form-control" placeholder="请输入用户姓名" name="username">
@@ -221,22 +143,3 @@
         </footer>
     </div>
 </div>
-
-
-<script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
-<script type="text/javascript">
-    $("[rel=tooltip]").tooltip();
-    $(function () {
-        $('.demo-cancel-click').click(function () {
-            return false;
-        });
-    });
-    
-    function loadPage() {
-        window.location.href="user-add.html";
-    }
-</script>
-
-
-</body>
-</html>
