--- a/src/main/resources/static/sign-in.html
+++ b/src/main/resources/static/sign-in.html
@@ -3,7 +3,7 @@
 
 <div class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
-        <a class="" href="../templates/index.html"><span class="navbar-brand"> 登录页面</span></a></div>
+        <a class="" href="../templates/index.html"><span class="navbar-brand"> 金融借贷系统</span></a></div>
 
     <div class="navbar-collapse collapse" style="height: 1px;">
 
