--- a/src/main/resources/static/wechat/register.html
+++ b/src/main/resources/static/wechat/register.html
@@ -14,59 +14,78 @@
 
 </head>
 <body ontouchstart>
+<div id="show" style="display:none;">
+    <header class='we-header'>
+        <h1 class="we-title">注册</h1>
+    </header>
 
-<header class='we-header'>
-    <h1 class="we-title">注册</h1>
-</header>
-
-<div class="weui_cells weui_cells_form">
-    <div class="weui_cell">
-        <div class="weui_cell_hd"><label class="weui_label">姓名：</label></div>
-        <div class="weui_cell_bd weui_cell_primary">
-            <input class="weui_input" type="tel" placeholder="请输入您的姓名">
-        </div>
-    </div>
-    <div class="weui_cell">
-        <div class="weui_cell_hd"><label class="weui_label">手机号：</label></div>
-        <div class="weui_cell_bd weui_cell_primary">
-            <input class="weui_input" type="tel" maxlength="11" placeholder="请输入手机号">
-        </div>
-    </div>
-    <div class="weui_cell weui_vcode">
-        <div class="weui_cell_hd"><label class="weui_label">验证码：</label></div>
-        <div class="weui_cell_bd weui_cell_primary">
-            <input class="weui_input" type="number" placeholder="请输入验证码">
-        </div>
-        <div class="weui_cell_ft">
-            <div class="smsCode notSend"><span class="smsSpan">获取验证码：</span></div>
-        </div>
-    </div>
-    <div class="weui_cell">
-        <div class="weui_cell_hd"><label class="weui_label">身份证：</label></div>
-        <div class="weui_cell_bd weui_cell_primary">
-            <input class="weui_input" type="tel" maxlength="18" placeholder="请输入身份证号">
-        </div>
-    </div>
     <div class="weui_cells weui_cells_form">
-        <div class="weui_cell">
-            <div class="weui_cell_hd"><label class="weui_label">所在城市：</label></div>
-            <div class="weui_cell_bd weui_cell_primary">
-                <input class="weui_input" id="start" type="text" value="湖北省 武汉市 武昌区" readonly>
+        <form>
+            <input type="hidden" name="code" id="code" value="">
+            <input type="hidden" name="openid" id="openid" value="">
+            <div class="weui_cell">
+                <div class="weui_cell_hd"><label class="weui_label">姓名：</label></div>
+                <div class="weui_cell_bd weui_cell_primary">
+                    <input class="weui_input" type="tel" placeholder="请输入您的姓名">
+                </div>
             </div>
-        </div>
-    </div>
+            <div class="weui_cell">
+                <div class="weui_cell_hd"><label class="weui_label">手机号：</label></div>
+                <div class="weui_cell_bd weui_cell_primary">
+                    <input class="weui_input" type="tel" maxlength="11" placeholder="请输入手机号">
+                </div>
+            </div>
+            <div class="weui_cell weui_vcode">
+                <div class="weui_cell_hd"><label class="weui_label">验证码：</label></div>
+                <div class="weui_cell_bd weui_cell_primary">
+                    <input class="weui_input" type="number" placeholder="请输入验证码">
+                </div>
+                <div class="weui_cell_ft">
+                    <div class="smsCode notSend"><span class="smsSpan">获取验证码</span></div>
+                </div>
+            </div>
+            <div class="weui_cell">
+                <div class="weui_cell_hd"><label class="weui_label">身份证：</label></div>
+                <div class="weui_cell_bd weui_cell_primary">
+                    <input class="weui_input" type="tel" maxlength="18" placeholder="请输入身份证号">
+                </div>
+            </div>
+            <div class="weui_cells weui_cells_form">
+                <div class="weui_cell">
+                    <div class="weui_cell_hd"><label class="weui_label">所在城市：</label></div>
+                    <div class="weui_cell_bd weui_cell_primary">
+                        <input class="weui_input" id="start" type="text" value="湖北省 武汉市 武昌区" readonly>
+                    </div>
+                </div>
+            </div>
 
-    <div class="weui_btn_area">
-        <a class="weui_btn weui_btn_primary" href="javascript:" id="showTooltips">注册</a>
+            <div class="weui_btn_area">
+                <a class="weui_btn weui_btn_primary" href="javascript:" id="showTooltips">注册</a>
+            </div>
+        </form>
     </div>
 </div>
+
+<div id="loading">
+    <header class='we-header'>
+        <h1 class="we-title">正在加载...</h1>
+    </header>
+</div>
+
+<div id="error" >
+    <header class='we-header'>
+        <h1 class="we-title">请在微信打开</h1>
+    </header>
+</div>
+
 </body>
 <script src="../js/jquery-2.1.4.js"></script>
 <script src="../js/fastclick.js"></script>
 <script>
-    $(function() {
+    $(function () {
         FastClick.attach(document.body);
     });
+
 </script>
 <script type="text/javascript" src="../js/city-picker.min.js"></script>
 <script type="text/javascript" src="../js/jquery-weui.js"></script>
@@ -87,6 +106,7 @@
                 dataType: "json",
                 async: true,
                 success: function (data) {
+                    $("#loading").hide();
                     var openId = '';
                     if (isNotEmptyStr(data.openId)) {
                         openId = data.openId;
@@ -94,9 +114,19 @@
                     } else {
                         openId = localStorage.getItem("openId");
                     }
-                    console.log(data);
+                    console.log( data);
+                    if (isNotEmptyStr(openId)) {
+                        $("#openid").val(openId);
+                        $("#show").show();
+                        $("#loading").hide();
+                        $("#error").hide();
+                    } else {
+                        $("#error").show();
+                        $("#show").hide();
+                    }
                 },
                 error: function (data) {
+                    $("#loading").hide();
                     alert("出错了")
                 }
             })
