保存或更新用户资料

--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -32,11 +32,11 @@
 <div class="sidebar-nav">
     <ul>
         <!--<li><a href="">{{menu.menu_name}}</a></li>-->
-        <li><a href="javascipt:;" data-target=".dashboard-menu" class="nav-header" data-toggle="collapse">
+        <li><a href="#" data-target=".dashboard-menu" class="nav-header" data-toggle="collapse">
             用户管理<i class="fa fa-collapse"></i></a></li>
         <li>
             <ul class="dashboard-menu nav nav-list collapse in">
-                <li class="active"><a ui-sref="main.users" ui-sref-opts="{reload: true}" href="#"><span class="fa fa-caret-right"></span> 用户查询</a></li>
+                <li class="active"><a ui-sref="main.users" ui-sref-opts="{reload:true}" href="#"><span class="fa fa-caret-right"></span> 用户查询</a></li>
             </ul>
         </li>
 
