--- a/src/main/resources/static/nihao.html
+++ b/src/main/resources/static/nihao.html
@@ -1,17 +1,1 @@
-<div class="modal-header">
-    <h4 class="modal-title">删除</h4>
-</div>
-
-<div class="modal-body">
-    <form autocomplete="off" class="file-brief file-brief-show form-validation" name="ObsForm" id="form-new-style">
-        <div class="col-sm-12 m-t-xs m-b-xs ">
-            <div class="form-group">
-                <label>您确认要删除吗?</label>
-            </div>
-        </div>
-    </form>
-</div>
-<div class="modal-footer">
-    <button type="submit" class="btn" ng-click="confirm()" >确定</button>
-    <button type="button" class="btn" ng-click="cancel()">取消</button>
-</div>
+<p>nihao</p>
