--- a/src/main/resources/static/user/user-add.html
+++ b/src/main/resources/static/user/user-add.html
@@ -48,7 +48,7 @@
                         <td>
                         <td col colspan="2"></td>
                         <td colspan="2">
-                            <button class="btn btn-primary"><i class="fa fa-save"></i> 保存</button>
+                            <button class="btn btn-primary" ng-click="submitForm()"><i class="fa fa-save"></i> 保存</button>
                         </td>
                     </tr>
                 </table>
