--- a/src/main/resources/static/wechat/register.html
+++ b/src/main/resources/static/wechat/register.html
@@ -74,7 +74,7 @@
 
 <div id="error" style="display: none;">
     <header class='we-header'>
-        <h1 class="we-title">请在微信打开客户端打开</h1>
+        <h1 class="we-title">请在微信客户端打开</h1>
     </header>
 </div>
 
