--- a/src/main/resources/static/sign-in.html
+++ b/src/main/resources/static/sign-in.html
@@ -18,13 +18,13 @@
                 <form name="loginForm" novalidate>
                     <div class="form-group tipsfather">
                         <label>账号</label>
-                        <input type="text" class="form-control span12" name="userAccount" ng-model="formData.userAccount" required>
+                        <input type="text" class="form-control span12" name="userAccount" ng-model="formData.userAccount" ng-class="{'activity':formData.userAccount == ''}" required>
                         <!--标签在不为空且被编辑过显示-->
                         <span class="tips" ng-show="loginForm.userAccount.$error.required && loginForm.userAccount.$pristine == false"><span></span> 请输入账号  </span>
                     </div>
                     <div class="form-group tipsfather">
                         <label>密码</label>
-                        <input type="password" class="form-control span12" name="userPwd" ng-model="formData.userPwd" required>
+                        <input type="password" class="form-control span12" name="userPwd" ng-model="formData.userPwd" ng-class="{'activity':formData.userPwd == ''}" required>
                         <span class="tips" ng-show="loginForm.userPwd.$error.required && loginForm.userPwd.$pristine == false"><span></span> 请输入密码  </span>
                     </div>
                     <a class="btn btn-primary pull-right" href="" ng-click="signIn()" ng-hide="loginForm.userAccount.$error.required || loginForm.userPwd.$error.required">登录</a>
